components/operators/gpu-operator-certified/instance/components/schedule-on-tainted-nodes/patch-cluster-policy.yaml
kind: ClusterPolicy
apiVersion: nvidia.com/v1
metadata:
  name: gpu-cluster-policy
spec:
  daemonsets:
    tolerations:
      - effect: NoSchedule
        key: nvidia.com/gpu
        operator: Exists
      - effect: NoSchedule
        key: nvidia.com/gpu
        operator: Equal
        value: "True"
